Fix workspace import overwrite issues.

Resolution to MR1155. Patch file by tiar. Tested and seems to work appropriately.

BUG:444975
(cherry picked from commit e715c2676cfa97e72e9e0bd869359d827524d2f4)